--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -18,6 +18,11 @@ body {
   margin: 0;
 }
 
-div{
-  border: 0px solid red;
+#drag-bar {
+  position: fixed;
+  top: 0px;
+  height: 1rem;
+  width: 100%;
+  opacity: 0;
+  -webkit-app-region: drag;
 }
